# Android-Practice

./: LICENSE  README.md  README.txt  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opus-lib.cpp
app/src/main/java/com/example/mypractice/: AudioChatManager.kt  ChatActivity.kt  ChessBoard.kt  ChessGameActivity.kt  ChessPiece.kt  DrawTest.kt  GameManager.kt  GameViewModel.kt  MainActivity.kt  OLDTCPConnectorActivity.kt  OLDTCPListenerActivity.kt  TCPConnecter.kt  TCPConnecterActivity.kt  TCPConnectorActivity.kt  TCPListener.kt  TCPListenerActivity.kt  UDPAudioChat.kt
app/src/main/java/com/example/mypractice/chat/: MessageChatActivity.kt  MessageChatViewModel.kt
app/src/main/java/com/example/mypractice/chessboard/: ChessBoard.kt  ChessPiece.kt  GameActivity.kt  GameViewModel.kt
app/src/main/java/com/example/mypractice/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/com/example/mypractice/utils/: BaseComponentActivity.kt  BaseViewModel.kt  ImageLoader.kt  TCPCombineCommandViewModel.kt  TCPCommandViewModel.kt  TCPConnectorActivity.kt  TCPConnectorViewModel.kt  TCPListenerActivity.kt  TCPListenerViewModel.kt  TcpConnectorViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
